Fix overflow issue.

--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -28,9 +28,6 @@ h2{
 }
 
 html{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   color-scheme: light;
   forced-color-adjust: none;
 }
@@ -44,8 +41,21 @@ body {
   height: 100%;
   scroll-behavior: smooth;
   /* overflow-x: hidden; */
-  /* overflow-x: clip; */
+  overflow-x: clip;
 }
+
+/* Chrome, Edge, Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+
+/* Firefox */
+* {
+  scrollbar-width: none;
+  scrollbar-color: transparent;
+}
+
 
 .spinner {
   animation: spin 0.6s linear infinite;
